--- a/build.xml
+++ b/build.xml
@@ -5,25 +5,14 @@
 
 ============================================================================ -->
 
-<project
-		xmlns:ivy="antlib:org.apache.ivy.ant"
-		default="jar" basedir="." name="Arooa">
+<project basedir="." name="Arooa">
 
-	<taskdef uri="antlib:org.apache.maven.artifact.ant"
-	            resource="org/apache/maven/artifact/ant/antlib.xml"
-		classpath="../oj-assembly/antlibs/maven-ant-tasks-2.1.3.jar"/>
-	
-	<taskdef resource="org/apache/ivy/ant/antlib.xml"
-	                 uri="antlib:org.apache.ivy.ant" 
-		classpath="../oj-assembly/antlibs/ivy-2.5.0.jar"/>
-	
 	<!-- =================================================================== -->
 	<!-- Initialization target                                               -->
 	<!-- =================================================================== -->
 	<target name="init">
 
 		<tstamp/>
-
 
 		<!-- =================================================================== -->
 		<!-- Properties                                                          -->
@@ -43,277 +32,18 @@
 		<echo message="java.home is ${java.home}"/>
 		<echo message="--------------------------------------------------------------"/>
 
-		<property name="debug"          value="on"/>
-		<property name="optimize"       value="off"/>
-		<property name="deprecation"    value="off"/>
-		<property name="nowarn"         value="on"/>
-		<!-- <property name="build.compiler" value="classic"/> -->
-
 		<property name="src.dir"              value="./src"/>
-		<property name="main.java"        value="${src.dir}/main/java"/>
-        <property name="main.resources"   value="${src.dir}/main/resources"/>
-		<property name="test.java"        value="${src.dir}/test/java"/>
-        <property name="test.resources.dir"   value="${src.dir}/test/resources"/>
-		<property name="packages"             value="org.oddjob"/>
-
-		<property name="build.dir"        	value="./build"/>
-		<property name="build.src"        	value="${build.dir}/src"/>
-		<property name="build.classes"    	value="${build.dir}/classes"/>
-		<property name="build.tests" value="${build.dir}/test-classes"/>
-		<property name="build.javadocs"   	value="${build.dir}/javadocs"/>
 
 		<property name="target.dir"        	value="./target"/>
 
-		<property name="test.reports" value="${build.dir}/test-reports"/>
-		
-		<property name="jar.name"       	value="${name}-${build.version}.jar"/>
-		<property name="sources.jar.name"   value="${name}-${build.version}-sources.jar"/>
-		<property name="javadoc.jar.name"   value="${name}-${build.version}-javadoc.jar"/>
-
-		<filter token="Name"    value="${Name}"/>
-		<filter token="name"    value="${name}"/>
-		<filter token="version" value="${build.version}"/>
-		<filter token="date"    value="${TODAY}"/>
-		<filter token="log"     value="true"/>
-		<filter token="verbose" value="true"/>
-
 	</target>
 
-	<!-- =================================================================== -->
-	<!-- Prepare for the build                                               -->
-	<!-- =================================================================== -->
-	<target name="prepare" depends="init">
-
-		<mkdir dir="${build.dir}"/>
-
-		<ivy:settings file="../oj-assembly/ivysettings.xml"/>
-
-		<ivy:cachepath pathid="classpath" conf="default,provided" />
-		
-		<ivy:cachepath pathid="test-cachepath" conf="test" />
-			
-		<path id="test-classpath">
-			<pathelement path="${build.classes}" />
-			<path refid="test-cachepath"/>
-		</path>
-	
-
-	</target>
-
-	<!-- =================================================================== -->
-	<!-- Prepares the source code                                            -->
-	<!-- =================================================================== -->
-
-	<target name="prepare-src-main" depends="prepare">
-
-		<mkdir dir="${build.src}"/>
-		<mkdir dir="${build.classes}"/>
-
-		<copy todir="${build.src}" filtering="on">
-			<fileset dir="${main.java}"/>
-		</copy>
-
-	</target>
-
-	<target name="jar-sources" depends="prepare-src-main">
-	    <jar destfile="${build.dir}/${sources.jar.name}"
-	         basedir="${build.src}">
-	    </jar>
-	</target>
-
-	<!-- =================================================================== -->
-	<!-- Compiles the source directory                                       -->
-	<!-- =================================================================== -->
-	
-	<target name="compile" depends="prepare-src-main"
-          description="Compiles the source code">
-
-		<copy todir="${build.classes}">
-            <fileset dir="${main.resources}"/>
-		</copy>
-
-		<echo message="Compiling with Java ${ant.java.version}, debug ${debug}, optimize ${optimize}, deprecation ${deprecation}"/>
-
-		<javac srcdir="${build.src}"
-           destdir="${build.classes}"
-           debug="${debug}"
-           optimize="${optimize}"
-           deprecation="${deprecation}"
-           nowarn="${nowarn}">
-			<classpath refid="classpath"/>
-		</javac>
-	</target>
-
-	<!-- =================================================================== -->
-	<!-- Creates the jar file                                                -->
-	<!-- =================================================================== -->
-
-	<target name="jar" depends="compile" 
-		description="Generates the jar packages">
-
-	    <jar destfile="${build.dir}/${jar.name}"
-	         basedir="${build.classes}">
-			<metainf dir=".">
-				<include name="LICENSE.txt"/>
-				<include name="NOTICE.txt"/>
-			</metainf>
-
-		</jar>
-	</target>
-
-	<target name="jar-tests" depends="compile-tests" 
-		description="Generates the jar packages">
-
-	    <jar destfile="${build.dir}/${name}-tests-${build.version}.jar"
-	         basedir="${build.tests}">
-	    </jar>
-	</target>
-	         	
-	<!-- =================================================================== -->
-	<!-- Set a variable if javadoc is already up-to-date.                    -->
-	<!-- =================================================================== -->
-	<target name="javadocs_check">
-		<mkdir dir="${build.javadocs}"/>
-		<uptodate property="javadocs.notrequired" targetfile="${build.javadocs}/index.html" >
-			<srcfiles dir= "${build.src}" includes="**/*.java,**/package.html"/>
-		</uptodate>
-	</target>
-
-	<!-- =================================================================== -->
-	<!-- If javadoc is already up-to-date, print a message saying so.        -->
-	<!-- =================================================================== -->
-	<target name="javadocs_done" if="javadocs.notrequired">
-		<echo message="-------------------------------------------------------------"/>
-		<echo message="Not rebuilding Javadocs, as they are up-to-date:"/>
-		<echo message="  ${build.javadocs}/index.html is more recent than"/>
-		<echo message="  ${build.src}/**/*.java"/>
-		<echo message="-------------------------------------------------------------"/>
-	</target>
-
-	<!-- =================================================================== -->
-	<!-- Creates the API documentation                                       -->
-	<!-- =================================================================== -->
-	<target name="javadocs" depends="prepare-src-main, javadocs_check, javadocs_done"
-         unless="javadocs.notrequired"
-         description="Builds the API documentation (javadocs)">
-		<javadoc packagenames="${packages}.*"
-             sourcepath="${build.src}"
-             destdir="${build.javadocs}"
-             author="true"
-             version="true"
-             use="false"
-             noindex="true"
-             windowtitle="${Name} API"
-             doctitle="${Name}">
-			<classpath refid="classpath"/>
-			<tag name="oddjob.element" description="Oddjob Element: "/>
-			<tag name="oddjob.property" description="Oddjob Property: "/>
-			<tag name="oddjob.description" description="Description: "/>
-			<tag name="oddjob.example" description="Example: "/>
-			<tag name="oddjob.required" description="Required: "/>
-			<tag name="see"/>
-			<tag name="author"/>
-			<tag name="version"/>
-			<tag name="since"/>
-			<tag name="param"/>
-			<tag name="return"/>
-			<tag name="throws"/>
-		</javadoc>
-	</target>
-	
-	<target name="jar-javadoc" depends="javadocs">
-	    <jar destfile="${build.dir}/${javadoc.jar.name}"
-	         basedir="${build.javadocs}">
-	    </jar>
-	</target>
-
-	<!-- =================================================================== -->
-	<!-- Test targets                                                       -->
-	<!-- =================================================================== -->
-	
-	<target name="compile-tests" depends="compile" description="Compile jUnit tests">
-
-		<copy todir="${build.tests}" filtering="off">
-			<fileset dir="${test.resources.dir}"/>
-		</copy>
-		
-		<!-- Compile tests -->
-		<javac srcdir="${test.java}"
-            destdir="${build.tests}"
-            debug="${debug}"
-            optimize="${optimize}"
-            deprecation="${deprecation}">
-			<classpath refid="test-classpath"/>
-		</javac>
-
-	</target>
-
-	<target name="all-tests" depends="compile-tests" description="Perform jUnit tests">
-		<mkdir dir="${test.reports}"/>
-
-		<junitlauncher printsummary="yes" haltonfailure="no"
-					   failureproperty="junit.failure"
-					   excludetags="IntegrationTest">
-			<classpath>
-				<pathelement location="${build.tests}" />
-			</classpath>
-			<classpath refid="test-classpath"/>
-			<testclasses outputdir="${basedir}/${test.reports}">
-				<fork>
-					<sysproperty key="basedir" value="${basedir}"/>
-					<sysproperty key="ant.file" value="${ant.file}"/>
-				</fork>
-				<fileset dir="${build.tests}">
-					<include name="**/*Test.class" />
-					<exclude name="**/AllTest.class" />
-					<exclude name="**/*$$*Test.class" />
-				</fileset>
-				<listener type="legacy-brief" sendSysOut="true"/>
-				<listener type="legacy-xml" sendSysErr="true" sendSysOut="true"/>
-			</testclasses>
-		</junitlauncher>
-		
-		<junitreport todir="${test.reports}">
-			<fileset dir="${test.reports}">
-		    	<include name="TEST-*.xml"/>
-			</fileset>
-		    <report todir="${test.reports}"/>
-		</junitreport>
-		
-		<fail if="junit.failure" message="Unit test(s) failed. See reports in ${test.reports}."/>	
-
-	</target>
-
-	<target name="single-test" depends="compile-tests" description="Single JUnit test">
-		<junit printsummary="yes" haltonfailure="yes" fork="yes">
-			<classpath>
-				<pathelement location="${build.tests}" />
-			</classpath>
-			<classpath refid="test-classpath"/>
-			<formatter type="plain" usefile="no" />
-			<test name="${junit.test}"/>
-			<sysproperty key="basedir" value="${basedir}"/>
-			<sysproperty key="oddjob.home" value="${oddjob.home}"/>
-			<sysproperty key="ant.file" value="${ant.file}"/>
-		</junit>
-	</target>
-	
-	<!-- =================================================================== -->
-	<!-- Install in the source distribution                                    -->
-	<!-- =================================================================== -->
-	<target name="install" depends="jar, jar-tests">
-		
-		<ivy:publish resolver="local" pubrevision="${build.version}" overwrite="true" update="true">
-		   <artifacts pattern="${build.dir}/[artifact]-[revision].[ext]" />
-		</ivy:publish>
-		
-	</target>
-	
 	<!-- =================================================================== -->
 	<!-- Prepares the source distribution                                    -->
 	<!-- =================================================================== -->
-	<target name="dist-src" depends="init" if="dist.src.dir"
-          description="Prepares the source distribution">
+	<target name="dist-src" depends="init"
+            description="Prepares the source distribution"
+			if="dist.src.dir">
 		
 		<property name="to.dir" value="${dist.src.dir}/${name}"/>
 			
@@ -324,7 +54,7 @@
 		<copy todir="${to.dir}">
 			<fileset dir=".">
 				<include name="build.xml"/>
-                <include name="ivy.xml"/>
+                <include name="oj-assemble.xml"/>
                 <include name="LICENSE.txt"/>
 				<include name="NOTICE.txt"/>
 				<include name="README.md"/>
@@ -352,7 +82,6 @@
 	<!-- Clean targets                                                       -->
 	<!-- =================================================================== -->
 	<target name="clean" depends="init" description="Cleans the build directories">
-		<delete dir="${build.dir}"/>
 		<delete dir="${target.dir}"/>
 	</target>
 
